バージョンダイアログを追加

--- a/src/com/mac/tarchan/paintfx/PaintFX.fxml
+++ b/src/com/mac/tarchan/paintfx/PaintFX.fxml
@@ -21,6 +21,7 @@
                 <KeyCodeCombination alt="UP" code="N" control="UP" meta="DOWN" shift="UP" shortcut="UP" />
               </accelerator>
             </MenuItem>
+            <MenuItem mnemonicParsing="false" onAction="#onOpen" text="開く" />
             <SeparatorMenuItem mnemonicParsing="false" />
             <MenuItem mnemonicParsing="false" onAction="#onSave" text="保存">
               <accelerator>
