--- a/src/com/mac/tarchan/paintfx/New.fxml
+++ b/src/com/mac/tarchan/paintfx/New.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="150.0" minWidth="300.0" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="com.mac.tarchan.paintfx.NewController">
   <children>
-    <GridPane id="GridPane" hgap="8.0" prefWidth="240.0" vgap="8.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0">
+    <GridPane id="GridPane" hgap="8.0" prefWidth="240.0" vgap="8.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="46.0" AnchorPane.topAnchor="14.0">
       <children>
         <Label text="幅" GridPane.columnIndex="0" GridPane.rowIndex="0" />
         <Label text="高さ" GridPane.columnIndex="0" GridPane.rowIndex="1" />
