--- a/src/com/mac/tarchan/paintfx/About.fxml
+++ b/src/com/mac/tarchan/paintfx/About.fxml
@@ -7,12 +7,13 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox id="VBox" alignment="CENTER" prefHeight="150.0" prefWidth="600.0" spacing="5.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="com.mac.tarchan.paintfx.AboutController">
+<VBox id="VBox" alignment="CENTER" prefHeight="150.0" prefWidth="600.0" spacing="24.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="com.mac.tarchan.paintfx.AboutController">
   <children>
     <Label text="PaintFX 1.0" VBox.vgrow="ALWAYS">
       <font>
         <Font name="System Bold" size="48.0" />
       </font>
     </Label>
+    <Button id="onClose" fx:id="close" cancelButton="true" defaultButton="true" minWidth="75.0" mnemonicParsing="false" onAction="#onClose" text="OK" />
   </children>
 </VBox>
